@@ -1,6 +1,6 @@
 % File src/library/utils/man/getParseData.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 2012-2014 R Core Team
+% Copyright 2012-2015 R Core Team
 % Distributed under GPL 2 or later
 
 \name{getParseData}
@@ -59,7 +59,9 @@ getParseText(parseData, id)
     a leaf in the parse tree.}
   \item{text}{character string. If \code{includeText} is \code{TRUE}, the
     text of all tokens; if it is \code{NA} (the default), the text of terminal
-    tokens.  If \code{includeText == FALSE}, this column is not included.}
+    tokens.  If \code{includeText == FALSE}, this column is not included.
+    Very long strings (with source of 1000 characters or more) will not be stored;
+    a message giving their length and delimiter will be included instead.}
 
   The rownames of the data frame will be equal to the \code{id} values,
   and the data frame will have a \code{"srcfile"} attribute containing
