@@ -62,7 +62,8 @@
 
 
 /* Copy the first part of user declarations.  */
-
+/* Line 371 of yacc.c  */
+#line 1 "gram.y"
 
 /*
  *  R : A Computer Langage for Statistical Data Analysis
@@ -352,7 +353,8 @@ static int	xxvalue(SEXP, int, YYLTYPE *);
 #define YYSTYPE		SEXP
 
 
-
+/* Line 371 of yacc.c  */
+#line 358 "gram.c"
 
 # ifndef YY_NULL
 #  if defined __cplusplus && 201103L <= __cplusplus
@@ -436,57 +438,6 @@ extern int yydebug;
      UMINUS = 306
    };
 #endif
-/* Tokens.  */
-#define END_OF_INPUT 258
-#define ERROR 259
-#define STR_CONST 260
-#define NUM_CONST 261
-#define NULL_CONST 262
-#define SYMBOL 263
-#define FUNCTION 264
-#define INCOMPLETE_STRING 265
-#define LEFT_ASSIGN 266
-#define EQ_ASSIGN 267
-#define RIGHT_ASSIGN 268
-#define LBB 269
-#define FOR 270
-#define IN 271
-#define IF 272
-#define ELSE 273
-#define WHILE 274
-#define NEXT 275
-#define BREAK 276
-#define REPEAT 277
-#define GT 278
-#define GE 279
-#define LT 280
-#define LE 281
-#define EQ 282
-#define NE 283
-#define AND 284
-#define OR 285
-#define AND2 286
-#define OR2 287
-#define NS_GET 288
-#define NS_GET_INT 289
-#define COMMENT 290
-#define LINE_DIRECTIVE 291
-#define SYMBOL_FORMALS 292
-#define EQ_FORMALS 293
-#define EQ_SUB 294
-#define SYMBOL_SUB 295
-#define SYMBOL_FUNCTION_CALL 296
-#define SYMBOL_PACKAGE 297
-#define COLON_ASSIGN 298
-#define SLOT 299
-#define LOW 300
-#define TILDE 301
-#define NOT 302
-#define UNOT 303
-#define SPECIAL 304
-#define UPLUS 305
-#define UMINUS 306
-
 
 
 #if ! defined YYSTYPE && ! defined YYSTYPE_IS_DECLARED
@@ -529,7 +480,8 @@ int yyparse ();
 
 /* Copy the second part of user declarations.  */
 
-
+/* Line 390 of yacc.c  */
+#line 485 "gram.c"
 
 #ifdef short
 # undef short
@@ -2105,452 +2057,542 @@ yyreduce:
   switch (yyn)
     {
         case 2:
-
+/* Line 1787 of yacc.c  */
+#line 334 "gram.y"
     { YYACCEPT; }
     break;
 
   case 3:
-
+/* Line 1787 of yacc.c  */
+#line 335 "gram.y"
     { yyresult = xxvalue(NULL,2,NULL);	goto yyreturn; }
     break;
 
   case 4:
-
+/* Line 1787 of yacc.c  */
+#line 336 "gram.y"
     { yyresult = xxvalue((yyvsp[(1) - (2)]),3,&(yylsp[(1) - (2)]));	goto yyreturn; }
     break;
 
   case 5:
-
+/* Line 1787 of yacc.c  */
+#line 337 "gram.y"
     { yyresult = xxvalue((yyvsp[(1) - (2)]),4,&(yylsp[(1) - (2)]));	goto yyreturn; }
     break;
 
   case 6:
-
+/* Line 1787 of yacc.c  */
+#line 338 "gram.y"
     { YYABORT; }
     break;
 
   case 7:
-
+/* Line 1787 of yacc.c  */
+#line 341 "gram.y"
     { (yyval) = (yyvsp[(1) - (1)]); }
     break;
 
   case 8:
-
+/* Line 1787 of yacc.c  */
+#line 342 "gram.y"
     { (yyval) = (yyvsp[(1) - (1)]); }
     break;
 
   case 9:
-
+/* Line 1787 of yacc.c  */
+#line 345 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)])); }
     break;
 
   case 10:
-
+/* Line 1787 of yacc.c  */
+#line 348 "gram.y"
     { (yyval) = (yyvsp[(1) - (1)]);	setId( (yyval), (yyloc)); }
     break;
 
   case 11:
-
+/* Line 1787 of yacc.c  */
+#line 349 "gram.y"
     { (yyval) = (yyvsp[(1) - (1)]);	setId( (yyval), (yyloc)); }
     break;
 
   case 12:
-
+/* Line 1787 of yacc.c  */
+#line 350 "gram.y"
     { (yyval) = (yyvsp[(1) - (1)]);	setId( (yyval), (yyloc)); }
     break;
 
   case 13:
-
+/* Line 1787 of yacc.c  */
+#line 351 "gram.y"
     { (yyval) = (yyvsp[(1) - (1)]);	setId( (yyval), (yyloc)); }
     break;
 
   case 14:
-
+/* Line 1787 of yacc.c  */
+#line 353 "gram.y"
     { (yyval) = xxexprlist((yyvsp[(1) - (3)]),&(yylsp[(1) - (3)]),(yyvsp[(2) - (3)])); setId( (yyval), (yyloc)); }
     break;
 
   case 15:
-
+/* Line 1787 of yacc.c  */
+#line 354 "gram.y"
     { (yyval) = xxparen((yyvsp[(1) - (3)]),(yyvsp[(2) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 16:
-
+/* Line 1787 of yacc.c  */
+#line 356 "gram.y"
     { (yyval) = xxunary((yyvsp[(1) - (2)]),(yyvsp[(2) - (2)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 17:
-
+/* Line 1787 of yacc.c  */
+#line 357 "gram.y"
     { (yyval) = xxunary((yyvsp[(1) - (2)]),(yyvsp[(2) - (2)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 18:
-
+/* Line 1787 of yacc.c  */
+#line 358 "gram.y"
     { (yyval) = xxunary((yyvsp[(1) - (2)]),(yyvsp[(2) - (2)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 19:
-
+/* Line 1787 of yacc.c  */
+#line 359 "gram.y"
     { (yyval) = xxunary((yyvsp[(1) - (2)]),(yyvsp[(2) - (2)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 20:
-
+/* Line 1787 of yacc.c  */
+#line 360 "gram.y"
     { (yyval) = xxunary((yyvsp[(1) - (2)]),(yyvsp[(2) - (2)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 21:
-
+/* Line 1787 of yacc.c  */
+#line 362 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 22:
-
+/* Line 1787 of yacc.c  */
+#line 363 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 23:
-
+/* Line 1787 of yacc.c  */
+#line 364 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 24:
-
+/* Line 1787 of yacc.c  */
+#line 365 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 25:
-
+/* Line 1787 of yacc.c  */
+#line 366 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 26:
-
+/* Line 1787 of yacc.c  */
+#line 367 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 27:
-
+/* Line 1787 of yacc.c  */
+#line 368 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 28:
-
+/* Line 1787 of yacc.c  */
+#line 369 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 29:
-
+/* Line 1787 of yacc.c  */
+#line 370 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 30:
-
+/* Line 1787 of yacc.c  */
+#line 371 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 31:
-
+/* Line 1787 of yacc.c  */
+#line 372 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 32:
-
+/* Line 1787 of yacc.c  */
+#line 373 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 33:
-
+/* Line 1787 of yacc.c  */
+#line 374 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 34:
-
+/* Line 1787 of yacc.c  */
+#line 375 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 35:
-
+/* Line 1787 of yacc.c  */
+#line 376 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 36:
-
+/* Line 1787 of yacc.c  */
+#line 377 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 37:
-
+/* Line 1787 of yacc.c  */
+#line 378 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 38:
-
+/* Line 1787 of yacc.c  */
+#line 379 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 39:
-
+/* Line 1787 of yacc.c  */
+#line 380 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 40:
-
+/* Line 1787 of yacc.c  */
+#line 381 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 41:
-
+/* Line 1787 of yacc.c  */
+#line 383 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 42:
-
+/* Line 1787 of yacc.c  */
+#line 384 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(3) - (3)]),(yyvsp[(1) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 43:
-
+/* Line 1787 of yacc.c  */
+#line 386 "gram.y"
     { (yyval) = xxdefun((yyvsp[(1) - (6)]),(yyvsp[(3) - (6)]),(yyvsp[(6) - (6)]),&(yyloc)); 	setId( (yyval), (yyloc)); }
     break;
 
   case 44:
-
+/* Line 1787 of yacc.c  */
+#line 387 "gram.y"
     { (yyval) = xxfuncall((yyvsp[(1) - (4)]),(yyvsp[(3) - (4)]));  setId( (yyval), (yyloc)); modif_token( &(yylsp[(1) - (4)]), SYMBOL_FUNCTION_CALL ) ; }
     break;
 
   case 45:
-
+/* Line 1787 of yacc.c  */
+#line 388 "gram.y"
     { (yyval) = xxif((yyvsp[(1) - (3)]),(yyvsp[(2) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 46:
-
+/* Line 1787 of yacc.c  */
+#line 389 "gram.y"
     { (yyval) = xxifelse((yyvsp[(1) - (5)]),(yyvsp[(2) - (5)]),(yyvsp[(3) - (5)]),(yyvsp[(5) - (5)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 47:
-
+/* Line 1787 of yacc.c  */
+#line 390 "gram.y"
     { (yyval) = xxfor((yyvsp[(1) - (3)]),(yyvsp[(2) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 48:
-
+/* Line 1787 of yacc.c  */
+#line 391 "gram.y"
     { (yyval) = xxwhile((yyvsp[(1) - (3)]),(yyvsp[(2) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 49:
-
+/* Line 1787 of yacc.c  */
+#line 392 "gram.y"
     { (yyval) = xxrepeat((yyvsp[(1) - (2)]),(yyvsp[(2) - (2)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 50:
-
+/* Line 1787 of yacc.c  */
+#line 393 "gram.y"
     { (yyval) = xxsubscript((yyvsp[(1) - (5)]),(yyvsp[(2) - (5)]),(yyvsp[(3) - (5)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 51:
-
+/* Line 1787 of yacc.c  */
+#line 394 "gram.y"
     { (yyval) = xxsubscript((yyvsp[(1) - (4)]),(yyvsp[(2) - (4)]),(yyvsp[(3) - (4)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 52:
-
+/* Line 1787 of yacc.c  */
+#line 395 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));      setId( (yyval), (yyloc)); modif_token( &(yylsp[(1) - (3)]), SYMBOL_PACKAGE ) ; }
     break;
 
   case 53:
-
+/* Line 1787 of yacc.c  */
+#line 396 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));      setId( (yyval), (yyloc)); modif_token( &(yylsp[(1) - (3)]), SYMBOL_PACKAGE ) ; }
     break;
 
   case 54:
-
+/* Line 1787 of yacc.c  */
+#line 397 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 55:
-
+/* Line 1787 of yacc.c  */
+#line 398 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 56:
-
+/* Line 1787 of yacc.c  */
+#line 399 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));      setId( (yyval), (yyloc)); modif_token( &(yylsp[(1) - (3)]), SYMBOL_PACKAGE ) ;}
     break;
 
   case 57:
-
+/* Line 1787 of yacc.c  */
+#line 400 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));      setId( (yyval), (yyloc)); modif_token( &(yylsp[(1) - (3)]), SYMBOL_PACKAGE ) ;}
     break;
 
   case 58:
-
+/* Line 1787 of yacc.c  */
+#line 401 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 59:
-
+/* Line 1787 of yacc.c  */
+#line 402 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 60:
-
+/* Line 1787 of yacc.c  */
+#line 403 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 61:
-
+/* Line 1787 of yacc.c  */
+#line 404 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 62:
-
+/* Line 1787 of yacc.c  */
+#line 405 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));      setId( (yyval), (yyloc)); modif_token( &(yylsp[(3) - (3)]), SLOT ) ; }
     break;
 
   case 63:
-
+/* Line 1787 of yacc.c  */
+#line 406 "gram.y"
     { (yyval) = xxbinary((yyvsp[(2) - (3)]),(yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 64:
-
+/* Line 1787 of yacc.c  */
+#line 407 "gram.y"
     { (yyval) = xxnxtbrk((yyvsp[(1) - (1)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 65:
-
+/* Line 1787 of yacc.c  */
+#line 408 "gram.y"
     { (yyval) = xxnxtbrk((yyvsp[(1) - (1)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 66:
-
+/* Line 1787 of yacc.c  */
+#line 412 "gram.y"
     { (yyval) = xxcond((yyvsp[(2) - (3)]));   }
     break;
 
   case 67:
-
+/* Line 1787 of yacc.c  */
+#line 415 "gram.y"
     { (yyval) = xxifcond((yyvsp[(2) - (3)])); }
     break;
 
   case 68:
-
+/* Line 1787 of yacc.c  */
+#line 418 "gram.y"
     { (yyval) = xxforcond((yyvsp[(2) - (5)]),(yyvsp[(4) - (5)]));	setId( (yyval), (yyloc)); }
     break;
 
   case 69:
-
+/* Line 1787 of yacc.c  */
+#line 422 "gram.y"
     { (yyval) = xxexprlist0();	setId( (yyval), (yyloc)); }
     break;
 
   case 70:
-
+/* Line 1787 of yacc.c  */
+#line 423 "gram.y"
     { (yyval) = xxexprlist1((yyvsp[(1) - (1)]), &(yylsp[(1) - (1)])); }
     break;
 
   case 71:
-
+/* Line 1787 of yacc.c  */
+#line 424 "gram.y"
     { (yyval) = xxexprlist2((yyvsp[(1) - (3)]), (yyvsp[(3) - (3)]), &(yylsp[(3) - (3)])); }
     break;
 
   case 72:
-
+/* Line 1787 of yacc.c  */
+#line 425 "gram.y"
     { (yyval) = (yyvsp[(1) - (2)]);		setId( (yyval), (yyloc)); }
     break;
 
   case 73:
-
+/* Line 1787 of yacc.c  */
+#line 426 "gram.y"
     { (yyval) = xxexprlist2((yyvsp[(1) - (3)]), (yyvsp[(3) - (3)]), &(yylsp[(3) - (3)])); }
     break;
 
   case 74:
-
+/* Line 1787 of yacc.c  */
+#line 427 "gram.y"
     { (yyval) = (yyvsp[(1) - (2)]);}
     break;
 
   case 75:
-
+/* Line 1787 of yacc.c  */
+#line 430 "gram.y"
     { (yyval) = xxsublist1((yyvsp[(1) - (1)]));	  }
     break;
 
   case 76:
-
+/* Line 1787 of yacc.c  */
+#line 431 "gram.y"
     { (yyval) = xxsublist2((yyvsp[(1) - (4)]),(yyvsp[(4) - (4)])); }
     break;
 
   case 77:
-
+/* Line 1787 of yacc.c  */
+#line 434 "gram.y"
     { (yyval) = xxsub0();	 }
     break;
 
   case 78:
-
+/* Line 1787 of yacc.c  */
+#line 435 "gram.y"
     { (yyval) = xxsub1((yyvsp[(1) - (1)]), &(yylsp[(1) - (1)]));  }
     break;
 
   case 79:
-
+/* Line 1787 of yacc.c  */
+#line 436 "gram.y"
     { (yyval) = xxsymsub0((yyvsp[(1) - (2)]), &(yylsp[(1) - (2)])); 	modif_token( &(yylsp[(2) - (2)]), EQ_SUB ) ; modif_token( &(yylsp[(1) - (2)]), SYMBOL_SUB ) ; }
     break;
 
   case 80:
-
+/* Line 1787 of yacc.c  */
+#line 437 "gram.y"
     { (yyval) = xxsymsub1((yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]), &(yylsp[(1) - (3)])); 	modif_token( &(yylsp[(2) - (3)]), EQ_SUB ) ; modif_token( &(yylsp[(1) - (3)]), SYMBOL_SUB ) ; }
     break;
 
   case 81:
-
+/* Line 1787 of yacc.c  */
+#line 438 "gram.y"
     { (yyval) = xxsymsub0((yyvsp[(1) - (2)]), &(yylsp[(1) - (2)])); 	modif_token( &(yylsp[(2) - (2)]), EQ_SUB ) ; }
     break;
 
   case 82:
-
+/* Line 1787 of yacc.c  */
+#line 439 "gram.y"
     { (yyval) = xxsymsub1((yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]), &(yylsp[(1) - (3)])); 	modif_token( &(yylsp[(2) - (3)]), EQ_SUB ) ; }
     break;
 
   case 83:
-
+/* Line 1787 of yacc.c  */
+#line 440 "gram.y"
     { (yyval) = xxnullsub0(&(yylsp[(1) - (2)])); 	modif_token( &(yylsp[(2) - (2)]), EQ_SUB ) ; }
     break;
 
   case 84:
-
+/* Line 1787 of yacc.c  */
+#line 441 "gram.y"
     { (yyval) = xxnullsub1((yyvsp[(3) - (3)]), &(yylsp[(1) - (3)])); 	modif_token( &(yylsp[(2) - (3)]), EQ_SUB ) ; }
     break;
 
   case 85:
-
+/* Line 1787 of yacc.c  */
+#line 444 "gram.y"
     { (yyval) = xxnullformal(); }
     break;
 
   case 86:
-
+/* Line 1787 of yacc.c  */
+#line 445 "gram.y"
     { (yyval) = xxfirstformal0((yyvsp[(1) - (1)])); 	modif_token( &(yylsp[(1) - (1)]), SYMBOL_FORMALS ) ; }
     break;
 
   case 87:
-
+/* Line 1787 of yacc.c  */
+#line 446 "gram.y"
     { (yyval) = xxfirstformal1((yyvsp[(1) - (3)]),(yyvsp[(3) - (3)])); 	modif_token( &(yylsp[(1) - (3)]), SYMBOL_FORMALS ) ; modif_token( &(yylsp[(2) - (3)]), EQ_FORMALS ) ; }
     break;
 
   case 88:
-
+/* Line 1787 of yacc.c  */
+#line 447 "gram.y"
     { (yyval) = xxaddformal0((yyvsp[(1) - (3)]),(yyvsp[(3) - (3)]), &(yylsp[(3) - (3)]));   modif_token( &(yylsp[(3) - (3)]), SYMBOL_FORMALS ) ; }
     break;
 
   case 89:
-
+/* Line 1787 of yacc.c  */
+#line 449 "gram.y"
     { (yyval) = xxaddformal1((yyvsp[(1) - (5)]),(yyvsp[(3) - (5)]),(yyvsp[(5) - (5)]),&(yylsp[(3) - (5)])); modif_token( &(yylsp[(3) - (5)]), SYMBOL_FORMALS ) ; modif_token( &(yylsp[(4) - (5)]), EQ_FORMALS ) ;}
     break;
 
   case 90:
-
+/* Line 1787 of yacc.c  */
+#line 452 "gram.y"
     { EatLines = 1; }
     break;
 
 
-
+/* Line 1787 of yacc.c  */
+#line 2596 "gram.c"
       default: break;
     }
   /* User semantic actions sometimes alter yychar, and that requires
@@ -2788,7 +2830,8 @@ yyreturn:
 }
 
 
-
+/* Line 2050 of yacc.c  */
+#line 454 "gram.y"
 
 
 
@@ -4869,6 +4912,11 @@ static int StringValue(int c, Rboolean forSymbol)
     }
     if (!currtext_truncated)
     	strcpy(yytext, currtext);
+    else if (forSymbol || !use_wcs) {
+        size_t total = strlen(stext);
+        snprintf(yytext, MAXELTSIZE, "[%d chars quoted with '%c']", total, quote);
+    } else 
+        snprintf(yytext, MAXELTSIZE, "[%d wide chars quoted with '%c']", wcnt, quote);
     if(forSymbol) {
 	PROTECT(yylval = install(stext));
 	if(stext != st0) free(stext);
