@@ -57,7 +57,9 @@
       
       \item \command{Rscript} and command line \command{R} silently
       ignored incomplete statements at the end of a script; now they
-      are reported as parse errors.  (\PR{16350})      
+      are reported as parse errors.  (\PR{16350})    
+
+      \item Parse data for very long strings was not stored.  (\PR{16354})
     }
   }
 }
